--- a/index.css
+++ b/index.css
@@ -147,4 +147,14 @@ table {
     margin-left:1%;
     margin-right:1%;
   }
+  pre code {
+    display: block;
+    background: none;
+    white-space: pre;
+    -webkit-overflow-scrolling: touch;
+    overflow-x: scroll;
+    max-width: 100%;
+    min-width: 100px;
+    padding: 0;
+  }
 }
