--- a/index.css
+++ b/index.css
@@ -29,6 +29,13 @@ h3 {
   color: green;
   font-size: large;
 }
+footer a{
+  text-decoration: none;
+  color:yellow;
+}
+ul{
+  margin-left: 2rem;
+}
 code{
   color:#333;
   font-size: large;
@@ -57,6 +64,7 @@ footer{
 }
 section{
   width:100%;
+  margin-bottom:1rem;
 }
 .content{
   margin-left:8%;
